--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,3 @@
 <head>
-    <title>TEST HEAD</title>
-</head>
+    <title>Support | Broadband Hub</title>
+    <link rel="stylesheet" href="/assets/css/style.css" </head>
