--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
 <head>
     <title>Support | Broadband Hub</title>
-    <link rel="stylesheet" href="/assets/css/style.css" </head>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+</head>
