--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,9 @@
 <head>
     <title>Support | Broadband Hub</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <style>
+        body {
+            background: green;
+        }
+    </style>
 </head>
